Bug 153078 - Whole section of Groupedbar Compact UI disappear
Summary: Whole section of Groupedbar Compact UI disappear
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.5.0.1 rc
Hardware: All All
: high major
Assignee: Xisco Faulí
URL:
Whiteboard: target:7.6.0 target:7.5.1
Keywords: bibisected, bisected, regression
: 153358 153414 153536 153568 153793 (view as bug list)
Depends on:
Blocks: Notebookbar-Groupedbar
  Show dependency treegraph
 
Reported: 2023-01-17 22:35 UTC by joe.broesele
Modified: 2023-03-15 07:48 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Calc - Disappeared Toolbar (30.99 KB, image/png)
2023-01-17 22:36 UTC, joe.broesele
Details
Calc- Temporariliy fixed by adding a shape (34.45 KB, image/png)
2023-01-17 22:37 UTC, joe.broesele
Details
Writer - Disappeared Toolbar (28.90 KB, image/png)
2023-01-17 22:38 UTC, joe.broesele
Details
Writer- Temporariliy fixed by adding a shape (37.51 KB, image/png)
2023-01-17 22:38 UTC, joe.broesele
Details
Lower icons still disappear after the fix (33.00 KB, image/png)
2023-02-08 21:59 UTC, joe.broesele
Details

Note You need to log in before you can comment on or make changes to this bug.
Description joe.broesele 2023-01-17 22:35:04 UTC
Description:
When using the Groupedbar Compact UI, it often happens that most of the toolbar icons disappear unexpectly.

A similar bug already was present under LibreOffice 7.2 to 7.4 (see https://bugs.documentfoundation.org/show_bug.cgi?id=147740), but now it has become worse.

Steps to Reproduce:
1. Open LibreOffice Writer.
2. Press Shift-F12.

Alternative:
1. Open LibreOffice Calc.
2. Press F2.

Actual Results:
A large part of the toolbar disappears.

Expected Results:
Toolbar remains unchanged.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Resizing the LibreOffce Window brings back the icons.
Adding a shape to the document (temprorarily) fixes the problem. It re-appears after the window has been resized.
Comment 1 joe.broesele 2023-01-17 22:36:40 UTC
Created attachment 184722 [details]
Calc - Disappeared Toolbar
Comment 2 joe.broesele 2023-01-17 22:37:11 UTC
Created attachment 184723 [details]
Calc- Temporariliy fixed by adding a shape
Comment 3 joe.broesele 2023-01-17 22:38:00 UTC
Created attachment 184724 [details]
Writer - Disappeared Toolbar
Comment 4 joe.broesele 2023-01-17 22:38:31 UTC
Created attachment 184725 [details]
Writer- Temporariliy fixed by adding a shape
Comment 5 Stéphane Guillou (stragu) 2023-01-30 09:53:51 UTC
Confirmed that the issue got worse. Checked using:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ec4babad021218b75dfe8534985d7db525edde69
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

I bibisected the "original" issue in bug 147740, but this seems a fair bit different, especially since now it's visible in several components.

Not reproduced in version 7.4:

Version: 7.4.5.1 / LibreOffice Community
Build ID: 9c0871452b3918c1019dde9bfac75448afc4b57f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 6 Stéphane Guillou (stragu) 2023-01-30 10:11:34 UTC
Bibisected with linux-64-7.5 repository to first bad commit 6b535025a51a45755371f2f14b773c1fb43d8132 which points to core commit:

commit 801e6272dc299d4468ec094ce11b66494eb5018b
author	Henner Drewes <henner.drewes@gmail.com>	Fri Oct 21 10:07:45 2022 +0200
committer	Heiko Tietze <heiko.tietze@documentfoundation.org>	Mon Nov 07 14:45:05 2022 +0100
tree fc32d573e0300b801d6370025684b8c4eb227bbf
parent cfd49dc149896925c641181b8d710a32d8ebc2da
tdf#141684 fix disappearance of icons in Groupedbar and Groupedbar compact UI
Change-Id: I3f0e5edd196420c8c51b19cd1ceee8caba7f7fd9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141612

Henner, could you please have a look?
Heiko, copying you in as well as you reviewed the commit and Henner hasn't been active since that bugfix.

Upping the importance as it is a major UI glitch that affects various components, and a regression.
Comment 7 Heiko Tietze 2023-01-30 12:23:10 UTC
Maybe just not return with VclHBox::Resize();... Henner?
Comment 8 Commit Notification 2023-02-03 07:57:01 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bcf9e47791d5b3e1d6a75c73f3b8c9940abda8eb

tdf#153078: Revert "tdf#141684 fix disappearance of icons in Groupedbar and Groupedbar compact UI"

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-02-03 09:49:18 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/1f8d118dd0ea63a73592a712efb364c343c71082

tdf#153078: Revert "tdf#141684 fix disappearance of icons in Groupedbar and Groupedbar compact UI"

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Stéphane Guillou (stragu) 2023-02-03 19:54:10 UTC
*** Bug 153358 has been marked as a duplicate of this bug. ***
Comment 11 Xisco Faulí 2023-02-06 15:26:22 UTC
*** Bug 153414 has been marked as a duplicate of this bug. ***
Comment 12 joe.broesele 2023-02-08 21:57:54 UTC
The disappearance of the whole right parts of the Groupedbar Compact UI has been fixed by the update.

But the disappearing of the lower icons of the Groupedbar Compact UI has come back now. I have tested this with a nightly build of LibreOffice 7.5.1.0.0.

Procedure to trigger the bug:
1. Open LibreOffice Writer.
2. Change the user interface to Groupedbar Compact UI.
3. Make the LibreOffice Writer so wide that all items are visible.
4. Toggle Unordered List
5. Toggle Unordered List again

Error:
* Lower set of icons disappear.

It is the same problem as described here:
https://bugs.documentfoundation.org/show_bug.cgi?id=147740
Comment 13 joe.broesele 2023-02-08 21:59:24 UTC
Created attachment 185233 [details]
Lower icons still disappear after the fix
Comment 14 Heiko Tietze 2023-02-09 10:07:27 UTC
Bug 141684 was reopened. Let's rest this ticket in peace. Setting to verified as of c12.
Comment 15 V Stuart Foote 2023-02-11 14:24:51 UTC
*** Bug 153536 has been marked as a duplicate of this bug. ***
Comment 16 Stéphane Guillou (stragu) 2023-02-26 22:03:27 UTC
*** Bug 153568 has been marked as a duplicate of this bug. ***
Comment 17 Stéphane Guillou (stragu) 2023-03-15 07:48:29 UTC
*** Bug 153793 has been marked as a duplicate of this bug. ***