tdf#153078: Revert "tdf#141684 fix disappearance of icons in Groupedbar and Groupedbar compact UI"

This reverts commit 801e6272dc299d4468ec094ce11b66494eb5018b.

Revert it for now, until a better solution for tdf#141684
is found

Change-Id: I6c9fd7fb12149b67fe572d64cf00e6a3ec98611f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146504
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
(cherry picked from commit bcf9e47791d5b3e1d6a75c73f3b8c9940abda8eb)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146518
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>